k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devtube
spec:
  type: LoadBalancer
  selector:
    app: devtube
  ports:
    - port: 80
      targetPort: 5000
